# quizzical

./: .coverage  .coverage.Eric-Brooks-01.local.35359.XICqyYRx  .coverage.Eric-Brooks-01.local.66489.XEwvbqqx  .coverage.Eric-Brooks-01.local.75528.XWMDczrx  .coverage.Eric-Brooks-01.local.81603.XfTwfOox  .coverage.Eric-Brooks-01.local.87864.XEMKFYsx  .env.example  .gitignore  AUDIT-2026-06-28.md  AUDIT-2026-06-29.md  LICENSE  README.md  REMEDIATION.md  SUBPAGES-REVIEW-2026-06-29.md  UX_AUDIT_TRACKER.md  UX_DESIGN_TODO.md  UX_FEEDBACK_2026-05-25-PART2.md  UX_FEEDBACK_2026-05-25.md  _aca.txt  _azlogs.tmp  _start.json  _vitest_output.tmp  docker-compose.yaml  docker-compose.yml  package-lock.json  pytest.ini
backend/: .coveragerc  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  appconfig.local.yaml  main.py  pyproject.toml  pytest.ini
backend/app/: main.py
backend/app/agent/: _settings_proxy.py  canonical_catalog.py  canonical_sets.py  graph.py  instrument_rigor.py  llm_helpers.py  progress_phrases.py  prompts.py  schemas.py  state.py
backend/app/agent/tools/: __init__.py  analysis_tools.py  content_creation_tools.py  data_tools.py  image_tools.py  intent_classification.py  planning_tools.py  topic_keywords.yaml  utility_tools.py
backend/app/api/: dependencies.py
backend/app/api/endpoints/: admin_precompute.py  assets.py  config.py  content.py  events.py  feedback.py  healthz_precompute.py  media.py  quiz.py  results.py  topics.py
backend/app/core/: coercion.py  config.py  error_codes.py  errors.py  logging_config.py  server_timing.py
backend/app/jobs/: __init__.py  evaluator_drift_probe.py
backend/app/models/: api.py  db.py
backend/app/security/: rate_limit.py  session_lock.py
backend/app/services/: agent_recovery.py  character_describer.py  cost_meter.py  database.py  image_cost.py  image_pipeline.py  image_service.py  llm_concurrency.py  llm_service.py  local_fallback_limiter.py  openai_service.py  redis_cache.py  retry.py  state_hydration.py  support_notify.py  vision_judge.py
backend/app/services/embeddings/: __init__.py  cache.py
backend/app/services/icons/: __init__.py  binder.py  embedder.py  fal_ledger.py  hook.py  index.py  qa_pipeline.py  relevance_gate.py  seed.py
backend/db/init/: init.sql
backend/scripts/: SCHEDULED_TASK_SETUP.md  _precompute_judge.py  _precompute_spend.py  audit_pack_image_coverage.py  backfill_baseline_questions.py  backfill_images_for_batches.py  backfill_prod_images.py  backup_prod_db.ps1  build_starter_packs.py  canonical_growth_queue.py  eval_canonical_correctness.py  eval_image_quality.py  eval_resolution.py  generate_answer_images.py  generate_images_for_packs.py  generate_ranked_pack_candidates.py  generate_topic_pool.py  import_packs.py  migrate_local_to_blob.py  precompute_and_deploy_in_batches.py  prod_precompute_smoke.py  prod_render_smoke.py  promote_user_quizzes.py  regenerate_branded_images.py  rehost_fal_images.py
backend/tests/: README.md  conftest.py  test_api.py  test_unit.py
backend/tests/agent_modernization/: test_checkpointer.py  test_compiled_graph_e2e.py  test_factory_lifecycle.py  test_iter6_dry_helpers.py  test_iter7_shared_settings_proxy.py  test_iter8_llm_helpers_cleanup.py  test_iter9_analyze_topic_defaults.py  test_langgraph_version.py  test_serde_allowlist.py  test_state_consistency.py  test_state_roundtrip.py
backend/tests/api_modernization/: test_iterA_dependencies.py  test_iterB_turnstile.py  test_iterC_redis_cache.py  test_iterD_config.py  test_iterE_feedback.py  test_iterF_db_session_rollback.py  test_iterG_security_headers.py  test_iterH_turnstile_body_type.py  test_iterI_status_atomic_pointer.py  test_iterJ_next_question_validation.py
backend/tests/fixtures/: agent_graph_fixtures.py  background_tasks.py  db_fixtures.py  env_fixtures.py  http_client.py  id_fixtures.py  llm_fixtures.py  redis_fixtures.py  settings_fixtures.py  tool_fixtures.py  turnstile_fixtures.py
backend/tests/helpers/: assertions.py  builders.py  sample_payloads.py  samples.py  state_builders.py
backend/tests/integration/: test_admin_precompute_endpoints.py  test_admin_promotion_candidates.py  test_agent_final_save_field_merge.py  test_cost_ceiling_http.py  test_feedback_rate_limit.py  test_flag_quarantine_threshold.py  test_full_lifecycle_e2e.py  test_health.py  test_healthz_precompute.py  test_live_final_profile_quality.py  test_media_endpoint.py  test_quiz_media.py  test_quiz_next.py  test_quiz_proceed.py  test_quiz_proceed_lock.py  test_quiz_proceed_precompute_short_circuit.py  test_quiz_start.py  test_quiz_start_early_hints.py  test_quiz_start_precompute.py  test_quiz_start_precompute_short_circuit.py  test_quiz_status.py  test_results_endpoint.py
backend/tests/integration_extra/: test_quiz_error_paths.py
backend/tests/observability/: test_observability_and_lifecycle.py  test_server_timing.py
backend/tests/performance/: test_e2e_latency_budgets.py  test_perf_and_concurrency.py  test_precomp_hot_path_perf.py
backend/tests/prod_smoke/: conftest.py  test_turnstile_enforcement_prod.py
backend/tests/reliability/: test_app_lifecycle.py  test_config_concurrency_caps.py  test_redis_cache_failure_modes.py  test_shutdown_drain.py
backend/tests/security/: test_config_turnstile_env_override.py  test_config_yaml_safety.py  test_cors_hardened.py  test_docs_disabled_prod.py  test_extra_security_headers.py  test_feedback_text_limit.py  test_flag_honeypot.py  test_input_validation.py  test_live_cost_ceiling.py  test_live_cost_dollar_breaker.py  test_live_cost_reservation.py  test_llm_provider_keys_fail_closed.py  test_next_request_caps.py  test_precompute_outbound_ssrf.py  test_precompute_safety.py  test_precompute_secret_strength.py  test_quality_gates.py  test_quiz_start_ip_rate_limit.py  test_readiness_timeout.py  test_request_size_limit.py  test_server_timing.py  test_session_action_cap.py  test_topics_suggest_hardening.py  test_turnstile.py  test_turnstile_token_guard.py
backend/tests/smoke/: test_config_smoke.py  test_quiz_happy_path.py  test_quiz_smoke.py
evals/: .gitignore  README.md  (+7 more)
(+753 files in other folders)
