# backend/pyproject.toml

[project]
name = "quizzical-backend"
version = "0.1.0"
description = "The FastAPI backend for the Quizzical AI application."
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11, <3.14" # CORRECTED: Added an upper bound to match the dependency

# --- Main Dependencies ---
dependencies = [
    "fastapi>=0.120.0,<0.121.0",
    # Pin transitive deps with known HIGH/CRITICAL CVEs surfaced by Trivy:
    "starlette>=0.49.1,<0.50.0",      # CVE-2025-62727 (Range header DoS)
    "urllib3>=2.6.3,<3.0.0",          # CVE-2025-66418/66471/CVE-2026-21441
    "wheel>=0.46.2",                  # CVE-2026-24049 (privesc via malicious wheel)
    "PyJWT>=2.12.0",                  # CVE-2026-32597 (unknown crit header accepted)
    "aiohttp>=3.13.3",                # CVE-2025-69223 (auto_decompress)
    "azure-core>=1.38.0,<2.0.0",      # CVE-2026-21226 (untrusted deserialization)
    "cryptography>=46.0.5",           # CVE-2026-26007 (subgroup attack)
    "orjson>=3.11.6",                 # CVE-2025-67221 (unbounded recursion DoS)
    "litellm>=1.83.7,<2.0.0",         # GHSA-xqmj-j6mv-4862 (SSTI in /prompts/test); 35030 + 35029
    "typing-extensions>=4.9.0",
    "pydantic>=2.11.7,<3.0.0",
    "uvicorn[standard]>=0.35.0,<0.36.0",
    "langgraph>=1.1.0,<2.0.0",
    "langgraph-checkpoint>=4.0.0,<5.0.0",
    "openai>=2.8.0,<3.0.0",
    "python-dotenv>=1.1.1,<2.0.0",
    "structlog>=25.4.0,<26.0.0",
    "psycopg>=3.1.18,<4.0.0",
    "sqlalchemy>=2.0.42,<3.0.0",
    "asyncpg>=0.29.0,<0.30.0",
    "alembic>=1.16.4,<2.0.0",
    "mako>=1.3.12",                  # CVE-2026-44307 (HIGH) — path traversal via backslash URI on Windows; transitive via alembic
    "pgvector>=0.4.1,<0.5.0",
    "pydantic-settings>=2.10.1,<3.0.0",
    "azure-identity>=1.23.1,<2.0.0",
    "azure-appconfiguration-provider>=2.1.0,<3.0.0",
    "azure-storage-blob>=12.20.0,<13.0.0",  # §21 Phase 12 — blob storage provider
    "redis>=6.4.0,<7.0",
    "redisvl>=0.5.1",
    "tenacity>=8.5.0,<9.0.0",
    "langchain-core>=1.0.0,<2.0.0",
    "fal-client>=0.1.1",
    "langgraph-checkpoint-redis>=0.1.1",
    "langchain-community>=0.4.0,<2.0.0",
    "wikipedia>=1.4.0,<2.0.0",
    "httpx>=0.28.0,<0.29.0",
    "azure-monitor-opentelemetry (>=1.8.1,<2.0.0)",
    "opentelemetry-instrumentation-fastapi (>=0.59b0,<0.60)",
    "opentelemetry-instrumentation-asyncpg (>=0.59b0,<0.60)",
    "opentelemetry-instrumentation-redis (>=0.59b0,<0.60)",
    "opentelemetry-instrumentation-requests (>=0.59b0,<0.60)",
]

# --- Development Dependencies ---
[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "httpx>=0.28.0,<0.29.0",
    "ruff>=0.12.7",
    "black>=24.4.2",
    "isort>=5.13.2",
    "mypy>=1.9.0",
]

# --- Poetry-Specific Configuration ---
[tool.poetry]
packages = [{ include = "app" }]

# --- Build System ---
[build-system]
requires = ["poetry-core>=2.1.0"]
build-backend = "poetry.core.masonry.api"

# --- Linter & Formatter Configs ---
[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "C", "B"]
ignore = ["E501"]
[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "pytest-asyncio (>=1.2.0,<2.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "greenlet (>=3.2.4,<4.0.0)",
    "pytest-mock (>=3.15.1,<4.0.0)",
    "trio (>=0.31.0,<0.32.0)",
    "asgi-lifespan (>=2.1.0,<3.0.0)",
    "fakeredis (>=2.30.3,<3.0.0)"
]
